--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -37,7 +37,7 @@
 
 
                 <ol class="homework">
-                    <div class="row"><div class="col-lg-8">
+                    <div class="row"><div class="col-xl-12">
                         {{#each homeworks}}
                             {{> 'homework/components/overview_card_template'}}
                         {{else}}
