--- a/views/team/team_loggedin.hbs
+++ b/views/team/team_loggedin.hbs
@@ -1,12 +1,12 @@
 {{#extend "lib/loggedin" hideSearch="true"}}
 
     {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/authentication/home.css"/>
         <link rel="stylesheet" href="/styles/team/team.css"/>
     {{/content}}
 
     {{#content "page"}}
-        {{#embed "team/team"}}{{/embed}}
+        {{#embed "team/team" loggedin="true"}}{{/embed}}
+        {{#embed "lib/footer"}}{{/embed}}
     {{/content}}
 
     {{#content "scripts" mode="append"}}
