add missing partner footer :grin:

--- a/views/partner/partner_loggedin.hbs
+++ b/views/partner/partner_loggedin.hbs
@@ -6,6 +6,7 @@
 
     {{#content "page"}}
         {{#embed "partner/partner"}}{{/embed}}
+        {{#embed "lib/footer"}}{{/embed}}
     {{/content}}
 
     {{#content "scripts" mode="append"}}
