--- a/static/styles/team/team.scss
+++ b/static/styles/team/team.scss
@@ -103,7 +103,7 @@
 }
 .section-team div[id^=modal-container-] .modal-background .modal{
   width:100%;
-  display:inline;
+  display:inline-block;
   border-radius:3px;
   font-weight:300;
   position:relative
