--- a/views/team/team.hbs
+++ b/views/team/team.hbs
@@ -7,7 +7,7 @@
                 <div id="modal-container-{{id}}">
                     <div class="modal-background {{#if ../../loggedin}}modal-padding{{/if}}">
                         <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-                            <div class="modal-dialog" {{#if longDesc}}style="margin-top: {{longDesc}}"{{/if}} role="document">
+                            <div class="modal-dialog" style="margin-top: {{#if longDesc}} {{ longDesc }} {{else}} 20vh {{/if}}" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
