--- a/views/team/team.hbs
+++ b/views/team/team.hbs
@@ -17,7 +17,8 @@
                                     <div class="modal-body">
                                         <div class="row">
                                             <div class="col-md-3">
-                                                <div class="image-shadow js-tilt-container" style="background-image: url({{pictureUrl}});">
+                                                <div data-tilt data-tilt-glare data-tilt-max-glare="0.8">
+                                                    <img class="image" src="{{pictureUrl}}">
                                                 </div>
                                             </div>
                                             <div class="col-md-2"></div>
