--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -167,9 +167,11 @@
             <!-- Gruppen -->
             <div class="row">
                 <div class="col-sm-12">
-                    <a href="/courses/{{../_id}}/groups/add" class="btn btn-secondary btn-sm pull-right ml-1" data-toggle="tooltip" title="Gruppe hinzufügen">
-                        <i class="fa fa-plus" aria-hidden="true"></i><span class="hidden-md-down"> Gruppe hinzufügen</span>
-                    </a>
+                    {{#userHasPermission "COURSEGROUP_CREATE"}}
+                        <a href="/courses/{{../../_id}}/groups/add" class="btn btn-secondary btn-sm pull-right ml-1" data-toggle="tooltip" title="Gruppe hinzufügen">
+                            <i class="fa fa-plus" aria-hidden="true"></i><span class="hidden-md-down"> Gruppe hinzufügen</span>
+                        </a>
+                    {{/userHasPermission}}
                     <a data-toggle="collapse" class="collapse-toggle" href="#courseGroups">
                         <h4>
                             <small data-toggle="tooltip" title="Schülergruppen ein/ausklappen"><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></small>
