lighter tab design

--- a/views/homework/assignment.hbs
+++ b/views/homework/assignment.hbs
@@ -71,7 +71,7 @@
                 bis: {{dueDateF}} ({{dueTimeF}})
             </div>
             <div class="tab-view maintabs">
-                <nav class="tab-links">
+                <nav class="nav tab-links">
                     <a id="extended-tab-link" class="tab-link active" href="#activetabid=extended" alt="Details der Aufgabe">Details</a>
                     {{#if private}}
                         <a id="submission-tab-link" class="tab-link" href="#activetabid=submission" alt="Deine Abgabe">Abgabe</a>
