--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -14,15 +14,17 @@
 
         <div class="route-account">
             <form method="post">
+                {{#ifneq currentRole "Schüler"}}
                 <div class="form-group">
                     <label>Vorname</label>
-                    <input type="text" class="form-control" name="firstName" value="{{ currentUser.firstName }}">
+                    <input type="text" class="form-control" name="firstName" value="{{ ../currentUser.firstName }}">
                 </div>
 
                 <div class="form-group">
                     <label>Nachname</label>
-                    <input type="text" class="form-control" name="lastName" value="{{ currentUser.lastName }}">
+                    <input type="text" class="form-control" name="lastName" value="{{ ../currentUser.lastName }}">
                 </div>
+                {{/ifneq}}
 
                 <div class="form-group">
                     <span><Label>Geschlecht</Label><p class="text-muted" style="display: inline"> (optional)</p></span>
