--- a/views/homework/submission.hbs
+++ b/views/homework/submission.hbs
@@ -36,6 +36,17 @@
                 {{/each}}
             </select>
         </div>
+        <div class="form-group">
+            <label>Schülergruppe {{#if maxTeamMembers}}(maximal <span id="maxTeamMembers">{{@root.maxTeamMembers}}</span> Personen){{/if}}</label>
+            <select name="courseGroup" id="courseGroup" data-placeholder="Schülergruppe auswählen">
+                {{#each courseGroups}}
+                    <option value="{{this._id}}">{{this.name}}</option>
+                {{else}}
+                    <option value="" disabled>keine Schülergruppen in diesem Kurs</option>
+                {{/each}}
+            </select>
+        </div>
+
       {{/if}}
 
 
