--- a/static/styles/homework/submissions.scss
+++ b/static/styles/homework/submissions.scss
@@ -157,3 +157,12 @@
     }
   }
 }
+
+.submissionLabel {
+  color: $primaryColor;
+  font-size: 1rem;
+  margin-bottom: 1rem;
+  .fa {
+    padding-right: 0.5rem;
+  }
+}
