--- a/views/homework/submission.hbs
+++ b/views/homework/submission.hbs
@@ -1,7 +1,8 @@
 <section id="submission" class="tab-content section-homeworkdetails">
   {{#if submittable}}
     <div class="comment editor">
-        {{#embed "files/file-upload" }}{{/embed}}
+      <p class="submissionLabel"><i class="fa fa-folder-open"></i>Dateiabgabe</p>
+      {{#embed "files/file-upload" }}{{/embed}}
 
       {{#if submission}}
         <form class="form submissionForm ajaxForm" method="post" action="/homework/submit/{{submission._id}}">
@@ -12,11 +13,22 @@
         
       {{#if submission}}
         {{#embed "homework/components/submission_uploaded_files" deletionAllowed=true}}{{/embed}}
-        <hr>
+         <input type="hidden" name="_method" data-force-value="true" value="patch"/>
+      {{else}}
+        <div class="form-group section-uploaded-files">
+            <label>Zur Abgabe hochgeladene Dateien (ungespeichert!)</label>
+            <ul class="list-group-files d-flex flex-row"></ul>
+        </div>
+        <input type="hidden" name="_method" data-force-value="true" value="post"/>
+        <input name="schoolId" type="hidden" data-force-value="true" value="{{currentSchool}}"/>
+        <input name="studentId" type="hidden" data-force-value="true" value="{{currentUser._id}}"/>
       {{/if}}
       {{#if teamSubmissions}}
+        <hr>
+        <p class="submissionLabel"><i class="fa fa-users"></i>Teamabgabe {{#if maxTeamMembers}}(maximal <span id="maxTeamMembers">{{@root.maxTeamMembers}}</span> Personen){{/if}}</p>
         <div class="form-group">
-            <label>Teammitglieder {{#if maxTeamMembers}}(maximal <span id="maxTeamMembers">{{@root.maxTeamMembers}}</span> Personen){{/if}}</label>
+            <input name="teamSubmissionOptions" value="teamMembers" type="radio" id="teamMembers1" {{#unless @root.courseGroupSelected}}checked{{/unless}}/>
+            <label for="teamMembers1">Teammitglieder auswählen</label>
             <select name="teamMembers" id="teamMembers" multiple data-placeholder="Teammitglieder auswählen">
                 {{#each students}}
                     <option value="{{this._id}}" 
@@ -37,30 +49,19 @@
             </select>
         </div>
         <div class="form-group">
-            <label>Schülergruppe {{#if maxTeamMembers}}(maximal <span id="maxTeamMembers">{{@root.maxTeamMembers}}</span> Personen){{/if}}</label>
-            <select name="courseGroup" id="courseGroup" data-placeholder="Schülergruppe auswählen">
+            <input name="teamSubmissionOptions" value="courseGroup" type="radio" id="courseGroup1" {{#if @root.courseGroupSelected}}checked{{/if}}/>
+            <label for="courseGroup1">Schülergruppe auswählen</label>
+            <select name="courseGroupId" id="courseGroupId" data-placeholder="Schülergruppe auswählen">
                 {{#each courseGroups}}
-                    <option value="{{this._id}}">{{this.name}}</option>
+                    <option value="{{this._id}}" {{#ifeq this._id @root.submission.courseGroupId}}selected{{/ifeq}}>{{this.name}}</option>
                 {{else}}
                     <option value="" disabled>keine Schülergruppen in diesem Kurs</option>
                 {{/each}}
             </select>
         </div>
-
+        <hr>
       {{/if}}
-
-
-      {{#if submission}}
-        <input type="hidden" name="_method" data-force-value="true" value="patch"/>
-      {{else}}
-        <div class="form-group section-uploaded-files">
-            <label>Zur Abgabe hochgeladene Dateien (ungespeichert!)</label>
-            <ul class="list-group-files d-flex flex-row"></ul>
-        </div>
-        <input type="hidden" name="_method" data-force-value="true" value="post"/>
-        <input name="schoolId" type="hidden" data-force-value="true" value="{{currentSchool}}"/>
-        <input name="studentId" type="hidden" data-force-value="true" value="{{currentUser._id}}"/>
-      {{/if}}
+        <p class="submissionLabel"><i class="fa fa-text-width"></i>Textabgabe</p>
         <input name="homeworkId" type="hidden" data-force-value="true" value="{{_id}}"/>
         <div class="form-group">
             <textarea id="evaluation" name="comment" class="form-control customckeditor"
