more work on nav

--- a/theme/n21/style.scss
+++ b/theme/n21/style.scss
@@ -3,3 +3,8 @@ $secondaryColor: #FF0000;
 $accentColor: #b10438;
 
 $logoBackground: url("../../images/logo/logo-wt.png") no-repeat center;
+
+aside.nav-sidebar .sc-branding{
+    font-size: 18px;
+    max-width: 240px;
+}
