--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -5,6 +5,7 @@
     {{/content}}
 
     {{#content "scripts" mode="append"}}
+        <script src="/vendor/introjs/intro.min.js" type="text/javascript" defer></script>
         <script src="/scripts/login.js" type="text/javascript" defer></script>
         <script type="text/javascript" src="/vendor/mailchimp.js" data-dojo-config="usePlainJson: true, isDebug: false" defer></script>
     {{/content}}
