--- a/views/lib/header.hbs
+++ b/views/lib/header.hbs
@@ -17,7 +17,7 @@
                     <a class="nav-link" href="https://blog.schul-cloud.org/faq" target="_blank">FAQ</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Infos</a>
+                    <a class="nav-link" href="#" onclick="startIntro()">Infos</a>
                 </li>
             </ul>
         </nav>
