--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -2,6 +2,7 @@
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/lib/loggedin.css"/>
         <link rel="stylesheet" href="/styles/lib/feedback-button.css"/>
+        <link rel="stylesheet" href="/vendor/introjs/introjs.min.css"/>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
@@ -17,6 +18,7 @@
                 src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS_HTML"
                 defer></script>
         <script type="text/javascript" src="/scripts/notificationService/index.js" defer></script>
+        <script type="text/javascript" src="/vendor/introjs/intro.min.js" defer></script>
 
         <script type="text/javascript">
         window.addEventListener('DOMContentLoaded', function() {
@@ -28,6 +30,14 @@
         window.addEventListener("resize", function () {
             $('.sidebar-list').css({"height": window.innerHeight});
         });
+
+        var startIntro = function() {
+            introJs().setOptions({
+                nextLabel: "Weiter",
+                prevLabel: "Zurück",
+                doneLabel: "Fertig"
+            }).start();
+        }
         </script>
     {{/content}}
 
@@ -43,7 +53,7 @@
                         </a>
                     </li>
                     {{#each sidebarItems}}
-                        <li>
+                        <li data-step="{{this.step}}" data-intro="{{this.intro}}">
                             <a class="{{this.class}}" href="{{this.link}}"
                                 data-container=".navtooltips" data-toggle="tooltip" data-placement="right" data-title="{{this.name}}">
                                 <i class="fa fa-{{this.icon}}" aria-hidden="true"></i>
@@ -97,8 +107,8 @@
                     </ol>
                 {{/if}}
 
-                <ul class="nav navbar-nav float-xs-right dropdowns">
-                    <li class="nav-item qr-code-action">
+                <ul class="nav navbar-nav float-xs-right dropdowns" data-step="1" data-intro="Hier finden Sie übergreifende Informationen">
+                    <li class="nav-item qr-code-action" data-step="2" data-intro="Ganz einfach QR-Codes erstellen!">
                         <div class="dropdown minimal-dropdown">
                             <a class="btn btn-secondary btn-thin dropdown-toggle btn-create-qr" data-toggle="dropdown">
                                 <i class="fa fa-qrcode"></i>
@@ -108,7 +118,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="nav-item notification-dropdown">
+                    <li class="nav-item notification-dropdown" data-step="3" data-intro="Hier erhalten sie Benachrichtigungen">
                         <div class="dropdown minimal-dropdown">
                             <a class="btn btn-secondary btn-thin dropdown-toggle notification-dropdown-toggle {{#if
                                     recentNotifications}}recent{{/if}}" data-toggle="dropdown">
@@ -138,7 +148,7 @@
                         </div>
                     </li>
 
-                    <li class="nav-item help-drodown">
+                    <li class="nav-item help-drodown" data-step="4" data-intro="Hilfebereich für Ihre Fragen und Probleme">
                         <div class="dropdown minimal-dropdown">
                             <a class="btn btn-secondary btn-thin dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-question"></i>
@@ -174,7 +184,7 @@
                         {{/if}}
                     {{/if}}
 
-                    <li class="nav-item">
+                    <li class="nav-item" data-step="5" data-intro="Einstellungen und Log-Out">
                         <div class="btn-group">
                             <button type="button" class="btn btn-secondary dropdown-toggle account-toggle"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -184,6 +194,12 @@
                                 <a class="dropdown-item" href="/account/">Einstellungen</a>
                                 <a class="dropdown-item" href="/logout/">Abmelden</a>
                             </div>
+                        </div>
+                    </li>
+
+                    <li class="nav-item school-data">
+                        <div class="btn-group">
+                            <a href="#" onclick="startIntro()">Intro</span>
                         </div>
                     </li>
                 </ul>
