--- a/static/styles/lib/sc-theme/sc-card.scss
+++ b/static/styles/lib/sc-theme/sc-card.scss
@@ -55,6 +55,8 @@
                 padding: 0;
                 margin: 0;
                 border-radius: 50%;
+                background: none;
+                border: none;
                 color: #fff;
                 font-size: 20px;
                 text-decoration: none;
