--- a/static/styles/lib/sc-theme/sc-card.scss
+++ b/static/styles/lib/sc-theme/sc-card.scss
@@ -40,7 +40,8 @@
             font-weight: 700;
             overflow: hidden;
             z-index: 10;
-            text-shadow: 0 0 10px rgba(0, 0, 0, .5);
+            text-shadow: 2px 2px 5px rgba(0,0,0,.6);
+            padding-right: 5px;
             word-break: break-all;
             word-break: break-word;
         }
