--- a/theme/n21/views/lib/footer.hbs
+++ b/theme/n21/views/lib/footer.hbs
@@ -3,10 +3,9 @@
         <div class="center">
             <a>&copy; 2018 </a>
 
-            <nobr>
-                <span> - </span>
+            <div>
                 <a href="/impressum">Impressum & Datenschutzerklärung</a>
-            </nobr>
+            </div>
         </div>
     </div>
 </footer>
