--- a/views/lib/footer.hbs
+++ b/views/lib/footer.hbs
@@ -4,8 +4,7 @@
             <img src="/images/footer-logo.png"/>
             <a>&copy; 2018 Schul-Cloud </a>
 
-            <nobr>
-                <span> - </span>
+            <div>
                 <a href="/impressum">Impressum</a>
                 <span> - </span>
                 <a href="/impressum#data_security">Datenschutzerklärung</a>
@@ -15,7 +14,7 @@
                 <a href="/team">Team</a>
                 <span> - </span>
                 <a href="/partner">Partner</a>
-            </nobr>
+            </div>
         </div>
     </div>
 </footer>
