--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -554,3 +554,10 @@ footer {
         height: 12px;
     }
 }
+
+
+@media (max-width: 1024px) {
+    .intro-trigger {
+        display: none;
+    }
+}
