--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -2,6 +2,7 @@
 
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/authentication/home.css"/>
+        <link rel="stylesheet" href="/vendor/introjs/introjs.min.css" /> 
     {{/content}}
 
     {{#content "scripts" mode="append"}}
@@ -22,6 +23,7 @@
                     
                     <section class="card">
                         <div class="card-block">
+                            <div class="intro" data-step="1" data-intro="Hier können Sie einen Überblick über die Vorteile der Arbeit mit der Schul-Cloud einsehen. Außerdem erhalten Sie hier allgemeine Informationen über unser Projekt.">
 
                             <h4>Herzlich willkommen bei der Schul-Cloud !</h4>
                             <p>Das  <a href="https://hpi.de" target="_blank">Hasso-Plattner-Institut</a> für Digital Engineering entwickelt unter der Leitung von Prof. Dr. Christoph Meinel zusammen mit dem <a href="https://www.mint-ec.de/" target="_blank">MINT EC</a>, einem bundesweiten Exzellenznetzwerk von knapp 300 Schulen und unterstützt vom Bundesministerium für Forschung und Bildung eine Schul-Cloud. Die Schul-Cloud soll die technische Grundlage schaffen, dass Lehrer und Schüler in jedem Unterrichtsfach auch moderne digitale Lehr- und Lerninhalte nutzen können, so zwar so, wie Apps über Smartphones oder Tabletts nutzbar sind.</p>
@@ -40,6 +42,7 @@
                                 
                                 <p><a href="https://hpi.de/nc/veranstaltungen/hpi-veranstaltungen/2018/schul-cloud-forum-2018/anmeldung.html" target="_blank">Hier geht’s zur Anmeldung</a>. Wir freuen uns über Ihre Teilnahme</p>
                             </div>
+                        </div>
 
                             <h4>Niedrigschwelliger Zugang zu digitalen Unterrichtsinhalten</h4>
                             <img src="/images/login-left-cropped.png" alt="Schul-Cloud Illustration #1" class="pull-right illustration">
