--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -2,6 +2,7 @@
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/lib/loggedin.css"/>
         <link rel="stylesheet" href="/styles/lib/feedback-button.css"/>
+        <link rel="stylesheet" href="/vendor/introjs/introjs.min.css"/>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
@@ -17,6 +18,7 @@
                 src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS_HTML"
                 defer></script>
         <script type="text/javascript" src="/scripts/notificationService/index.js" defer></script>
+        <script type="text/javascript" src="/vendor/introjs/intro.min.js" defer></script>
 
         <script type="text/javascript">
         window.addEventListener('DOMContentLoaded', function() {
@@ -28,6 +30,9 @@
         window.addEventListener("resize", function () {
             $('.sidebar-list').css({"height": window.innerHeight});
         });
+        function startIntro() {
+            introJs().start();
+        }
         </script>
     {{/content}}
 
@@ -97,8 +102,8 @@
                     </ol>
                 {{/if}}
 
-                <ul class="nav navbar-nav float-xs-right dropdowns">
-                    <li class="nav-item qr-code-action">
+                <ul class="nav navbar-nav float-xs-right dropdowns" data-step="1" data-intro="Hier finden Sie übergreifende Informationen">
+                    <li class="nav-item qr-code-action" data-step="2" data-intro="Ganz einfach QR-Codes erstellen!">
                         <div class="dropdown minimal-dropdown">
                             <a class="btn btn-secondary btn-thin dropdown-toggle btn-create-qr" data-toggle="dropdown">
                                 <i class="fa fa-qrcode"></i>
@@ -108,7 +113,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="nav-item notification-dropdown">
+                    <li class="nav-item notification-dropdown" data-step="3" data-intro="Hier erhalten sie Benachrichtigungen">
                         <div class="dropdown minimal-dropdown">
                             <a class="btn btn-secondary btn-thin dropdown-toggle notification-dropdown-toggle {{#if
                                     recentNotifications}}recent{{/if}}" data-toggle="dropdown">
@@ -138,7 +143,7 @@
                         </div>
                     </li>
 
-                    <li class="nav-item help-drodown">
+                    <li class="nav-item help-drodown" data-step="4" data-intro="Hilfebereich für Ihre Fragen und Probleme">
                         <div class="dropdown minimal-dropdown">
                             <a class="btn btn-secondary btn-thin dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-question"></i>
@@ -174,7 +179,7 @@
                         {{/if}}
                     {{/if}}
 
-                    <li class="nav-item">
+                    <li class="nav-item" data-step="5" data-intro="Einstellungen und Log-Out">
                         <div class="btn-group">
                             <button type="button" class="btn btn-secondary dropdown-toggle account-toggle"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -184,6 +189,12 @@
                                 <a class="dropdown-item" href="/account/">Einstellungen</a>
                                 <a class="dropdown-item" href="/logout/">Abmelden</a>
                             </div>
+                        </div>
+                    </li>
+
+                    <li class="nav-item school-data intro-trigger">
+                        <div class="btn-group">
+                            <a href="#" onclick="startIntro()">Intro</span>
                         </div>
                     </li>
                 </ul>
