--- a/theme/n21/views/authentication/home.hbs
+++ b/theme/n21/views/authentication/home.hbs
@@ -26,15 +26,16 @@
                         (vgl. Abb. 3), stellt die NBC als Arbeitsplattform (Ebene 1) einen unmittelbaren Kontakt zwischen
                         den beteiligten Schulen her. Diese wird durch die Ebene 2 in Form eines Vermittlungsdienstes bzw.
                         einer dokumentierte API-Schnittstelle ermöglicht.</p>
-
-                    <img src="/images/stecker_homepage.png" alt="Cloud Illustration #1" class="pull-right illustration">
-
+                    <p>
+                        <img src="/images/stecker_homepage.png" alt="Cloud Illustration #1" class="img-fluid w-100">
+                    </p>
                     <p>Ferner enthält die, in der Kabinettssitzung am 05.07.2016 von der Niedersächsische Landesregierung beschlossene
                         Leitlinie, weitere zentrale Zielsetzungen:</p>
                     <ul>
                         <li>Verbindliche Entwicklung von schulischen Medienkonzepten, als integrale Bestandteile der Schulentwicklung.</li>
                         <li>Verbindliche Integration der Medienbildung in die erste und zweite Phase der Lehrerausbildung und
-                            Lehrerfortbildung</li>
+                            Lehrerfortbildung
+                        </li>
                         <li>Bereitstellung digitaler Unterrichtsmaterialien für Lehrkräfte, Schülerinnen und Schüler</li>
                         <li>Entwicklung von Empfehlungen für die Hardwareausstattung/ IT-Infrastruktur an Schulen sowie für deren
                             Vernetzung und Wartung vor dem Hintergrund des BYOD-Grundsatzes.</li>
