--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -41,7 +41,7 @@
                             </div>
 
                             <h4>Niedrigschwelliger Zugang zu digitalen Unterrichtsinhalten</h4>
-                            <img src="/images/login-left-cropped.png" alt="Schul-Cloud Illustration #1" class="pull-right illustration">
+                            <img src="/images/login-left-cropped.png" alt="Schul-Cloud Illustration #1" class="img-fluid w-100">
                             <p>Eine moderne Lehr- und Lerninfrastruktur ist unabdingbar, um die digitale Transformation im Bildungssektor zum Erfolg zu führen und Kinder schon im Schulalter optimal auf das Leben in einer zunehmend digitalen Gesellschaft vorzubereiten.</p>
 
                             <h4>Ansatzpunkte der Schul-Cloud</h4>
