--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -38,8 +38,8 @@
                 <ul class="sidebar-list">
                     <li>
                         <a class="sc-branding" href="/">
-                            <table><tr><td><div class="cloud-logo"></div>
-                            </td><td><span>{{themeTitle}}</span></td></tr></table>
+                            <div class="cloud-logo"></div>
+                            <div class="sc-title"><span>{{themeTitle}}</span></div>
                         </a>
                     </li>
                     {{#each sidebarItems}}
