--- a/theme/n21/style.scss
+++ b/theme/n21/style.scss
@@ -9,7 +9,7 @@ aside.nav-sidebar{
         font-size: 18px;
         max-width: 240px;
         .cloud-logo{
-            vertical-align: bottom;
+            vertical-align: top;
         }
         .sc-title {
             max-width: calc(100% - 54px) !important;
