--- a/views/homework/edit.hbs
+++ b/views/homework/edit.hbs
@@ -154,13 +154,13 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label>Bearbeitungszeit von:</label>
+                                <label>Für Schüler sichtbar und zu bearbeiten ab:</label>
                                 <input class="form-control" data-datetime name="availableDate" id="availableDate" type="text" value="{{assignment.availableDate}}"/>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label>bis:</label>
+                                <label>Bearbeitungszeitraum endet am:</label>
                                 <input class="form-control" data-datetime name="dueDate" id="dueDate" type="text" value="{{assignment.dueDate}}"/>
                             </div>
                         </div>
