--- a/views/administration/courses.hbs
+++ b/views/administration/courses.hbs
@@ -1,6 +1,11 @@
 {{#extend "administration/administration"}}
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/administration/course.css"/>
+        <link rel="stylesheet" href="/styles/lib/spectrum/spectrum.css"/>
+    {{/content}}
+    {{#content "scripts" mode="append"}}
+        <script src="/scripts/spectrum/spectrum.js" type="text/javascript" defer></script>
+        <script src="/scripts/spectrum/init.js" type="text/javascript" defer></script>
     {{/content}}
     {{#content "page"}}
         <div class="route-administration">
