--- a/views/administration/forms/form-courses.hbs
+++ b/views/administration/forms/form-courses.hbs
@@ -7,7 +7,7 @@
 
 <div class="form-group">
     <label>Farbe des Kurses:</label>
-    <input name="color" type="color" value="{{#if course.color}}{{course.color}}{{else}}#F44336{{/if}}" required/>
+    <input name="color" type="color" value="{{#if course.color}}{{course.color}}{{else}}#d32f2f{{/if}}" required/>
 </div>
 
 <div class="form-group">
